license = "MIT"
license-files = [
    "LICENSE",
]

[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.LITLabTheme"
version = "1.0.8"
description = "Customizations for Suffolk LIT Lab interviews."
readme = "README.md"
authors = [
    { name = "Suffolk LIT Lab", email = "litlab@suffolk.edu" },
]
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
